<resources>
    <string name="app_name">FilmSearch</string>
    <string name="toolbar_title">Start here</string>
    <string name="disclaimer">Posters from pexels.com</string>
    <string name="movie_poster">Movie poster</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_favorites_title">Favourites</string>
    <string name="menu_watch_later_title">Watch later</string>
    <string name="menu_selections_title">Collections</string>
    <string name="movie_poster_6" />
    <string name="movie_poster_7" />
    <string name="movie_poster_8" />
    <string name="movie_poster_9" />
    <string name="image">Image</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_fab_favorites">details_fab_favorites</string>
    <string name="details_fab_share">details_fab_share</string>
    <string name="imageview">ImageView</string>
</resources>