<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corner_background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/toolbar"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="@string/toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster_1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster_2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1 "
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster_3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/poster_4" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:layoutAnimation="@anim/layout_anim"
        android:orientation="horizontal"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disclaimer">

        <androidx.cardview.widget.CardView
            android:id="@+id/poster_6"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/press_button_animation"
            app:cardCornerRadius="15dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_poster_6"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_6" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/press_button_animation"
            android:id="@+id/poster_7"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_poster_7"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_7" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/press_button_animation"
            android:id="@+id/poster_8"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_poster_8"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_8" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/poster_9"
            android:layout_width="100dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/press_button_animation"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_poster_9"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_9" />
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>